# bot

./: README.md  ckp.py  main.py  pyproject.toml  stats.py
weibo/: __init__.py  client.py  model.py  test_client.py
