[project]
name = "weebiee-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.0",
    "beautifulsoup4>=4.13.4",
    "lxml>=5.4.0",
    "platformdirs>=4.3.8",
    "playwright>=1.52.0",
    "tqdm>=4.67.1",
]
